# image_foundations

./: .gitignore  00_aim.ipynb  01_simmim.ipynb  02_vitdet.ipynb  03_Masked_AutoEncoders_introduction.ipynb  04_Patchnpack.ipynb  05_ijepa.ipynb  CLAUDE.md  LICENSE  README.md  pyproject.toml
aim/: 00_aim.ipynb  00_blog.ipynb
dino/: README.md  autoresearch_report.md  config.py  ds.py  evaluate.py  loss.py  network.py  plot_progress.py  plot_training.py  program.md  prototype_analysis.py  results.tsv  train.py  transforms.py
